About text and dilemmas

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -1,11 +1,51 @@
 <!doctype html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/style.css" />    
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
+    <style>
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-2.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div>Negotiation Profiles</div>
+	<div align="center">
+        <img src="image-2.png" width="125px" height="125px" class="img-circle">
+	</div>
+    
+	<div>
+		<p style="margin: 20px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating effectively means reaching agreements that would slip through other people's fingers; creating value that others might overlook; and resolving small differences before they become costly disputes.</p>
+
+		<p style="margin: 20px;">Successful negotiators are well-rounded. They rely on a range of analytic, interpersonal, and problem-solving skills. They approach their approach to the situation at hand and have the agility to deal with different bargaining styles. </p>
+
+		<p style="margin: 20px;">To enhance your effectiveness as a negotiator, you need to recognize your strengths and weaknesses. <strong>Negotiation 360&deg;</strong> provides a personalized profile of the skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
+
+	</div>
+		 
+			
+	<div class="alert alert-info" style="margin:20px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe032;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				Tap Next to take the quiz, analyze your feedback, and then review the tips for making better deals
+			</div>
+		</div>
+	</div>
+	
+	<div style="height:100px">
+	</div>
+		
+			
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
