--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -34,7 +34,7 @@
 	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-	          <span data-icon="&#xe049;"></span>&nbsp;Understand the other side
+	          <span data-icon="&#xe049;"></span>&nbsp;&nbsp;Understand the other side
 	        </a>
 	      </h4>
 	    </div>
@@ -51,13 +51,13 @@
 	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-	          <span data-icon="&#xe021;"></span>&nbsp;Assert your interest
+	          <span data-icon="&#xe021;"></span>&nbsp;&nbsp;Assert your interest
 	        </a>
 	      </h4>
 	    </div>
 	    <div id="collapseTwo" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" id="example2" data-toggle="popover" data-placement="bottom" title="BATNA" data-content="an acronym for 'Best Alternative to a Negotiated Agreement'" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" id="example2" data-toggle="popover" data-placement="bottom" title="BATNA" data-content="an acronym for &ldquo;Best Alternative to a Negotiated Agreement&rdquo;" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus on their <strong>BATNA</strong> (their walkaway). Just because you need them doesn't mean that they don't need you just as much.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Practice</strong> in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Don't oversell.</strong> Research shows that people in weaker positions tend to talk too much.</li>
@@ -68,7 +68,7 @@
 	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-	          <span data-icon="&#xe050;"></span>&nbsp;Maximize your share
+	          <span data-icon="&#xe050;"></span>&nbsp;&nbsp;&nbsp;Maximize your share
 	        </a>
 	      </h4>
 	    </div>
@@ -85,7 +85,7 @@
 	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-	          <span data-icon="&#xe016;"></span>&nbsp;Create value
+	          <span data-icon="&#xe016;"></span>&nbsp;&nbsp;Create value
 	        </a>
 	      </h4>
 	    </div>
