--- a/Negotiation3/reports/delimaX.html
+++ b/Negotiation3/reports/delimaX.html
@@ -54,24 +54,31 @@
     <ul>
       <li class="first dragend-page">
 		    <div id="interpersonalDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: <i>asserting oneself</i> and <i>understanding others</i>. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship or appearing cooperative might be misread as being weak.)</p>
+			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others. Research show that many people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, while appearing cooperative might be misread as weakness.) Nevertheless, some people are good at both.</p>
       </li>
       <li class="dragend-page">
 		    <div id="outcomeDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Two other questions on the test address <strong>outcomes</strong>. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. Specifically, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
-      </li>
-      <li class="middle dragend-page">
-		    <div id="equalRatings" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>You can think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>. Putting the two scales together reveals common bargaining styles. In the example above, the two scales intersect at the zero-zero. Here the user gave himself four 5s for the four skills, counting out from the center for each one.</p>
+			<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it. There is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But unilateral disclosure of interests can be exploited if others bluff or do not disclose their true needs. Value will be created, but they will get most of it.</p>
       </li>
       <li class="dragend-page">
+		    <div id="equalRatings" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>How you relate to others affects results you achieve. Think of the interpersonal scale as representing the means of negotiation and the outcome scale as the ends. Putting the two scales together reveals common bargaining styles. In this example, the two scales intersect at the zero-zero, with a user who has a rating of 4 for the four skills, counting out from the center for each one. That balance may look nice, but some situations demand certain skills more than others.</p>
+      </li>
+      <li class="middle dragend-page">
 		    <div id="empatheticValueCreators" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>That balance may look nice, but certain situations demand certain skills more than others.</p>
-			<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better. Most of the people who've taken this test fall into one of two categories. The first, Empathetic Value Creators, is depicted above.</p>
+			<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better than perfect balance. Many people who've taken this test fall into one of two categories. <strong>Empathetic Value Creators</strong>, pictured here, understand the true needs of their counterparts and are more likely to spot problem-solving opportunities.</p>
+      </li>
+      <li class="dragend-page">
+		    <div id="assertiveValueClaimers" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>By contrast, someone whose interpersonal strength is self-advocacy is more likely to capture a larger slice of the pie (though less value may be available to grab). The profile of <strong>Assertive Value Claimers</strong> is shown here.</p>
+      </li>
+      <li class="dragend-page">
+		    <div id="superiorRelational" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>Less frequently, others who have taken this test have rated themselves high on both ends of the interpersonal scale. That's permissible, of course, but it raises a question of why, given their superior relational skills, they don't do better at creating and claiming value.</p>
       </li>
       <li class="last dragend-page">
-		    <div id="assertiveValueClaimers" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>They make practical sense. A person who is strong relationally and understands the true needs of his or her counterpart is more likely to spot creative, problem-solving opportunities. And someone whose strength is self-advocacy is more likely to capture a larger slice of the pie (though less value may be available to grab).</p>
+		    <div id="superiorOutcomes" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p>A few other people have rated themselves high on both ends of the outcome scale. That's allowable, as well, though it raises a question of how they are able to attain those results in spite of relational skills that are not as strong.</p>
       </li>
     </ul>
   </div>
