--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -149,15 +149,15 @@
 	        series: [{
 	            name: 'Your Profile',
 	            type: 'area',
-	            data: [6, 6, 2, 2],
+	            data: [%@, %@, %@, %@],
 				lineWidth: 5,
 	            animation: {
 	                duration: 1000
 	            }, 
 	        },	{
-		            name: 'Your Negotiator Group',
+		            name: '%@',
 		            type: 'area',
-		            data: [2, 2, 6, 6],
+		            data: [%@, %@, %@, %@],
 					lineWidth: 5,
 		            animation: {
 		                duration: 2000
