--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -99,7 +99,7 @@
 	        },
 
 	        pane: {
-	            size: '80%',
+	            size: '14%',
 		        startAngle: -45,
 	        },
 
@@ -147,7 +147,7 @@
 	        },
 
 	        series: [{
-	            name: 'Your Profile',
+	            name: 'Your Responses',
 	            type: 'area',
 	            data: [%@, %@, %@, %@],
 				lineWidth: 5,
