yourprofile styling changes

--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -13,7 +13,6 @@
 
     body {
 	  background: #fff;
-      padding: 20px;
       font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
 
@@ -44,19 +43,19 @@
 	<div id="container" style="margin: 10px auto 10px; width: 280px; height: 280px"></div>
 	
 	<div>
-		<p>The scores that you gave yourself generated this personal profile. Consider the following questions:</p>
+		<p style="margin: 20px;">The scores that you gave yourself generated this personal profile. Consider the following questions:</p>
 		
-		<ol style="margin:20px">
+		<ol style="margin:40px">
 			<li>Is this profile a good fit for the kinds of negotiations that you typically do? If you had to choose, where should your biggest strength be?</li><br>
 			<li>Can you see a connection between your relational skills and your ability to create and claim value?</li><br>
 			<li>How flexible are you, that is, can you be more assertive when that's necessary, but more creative when that's appropriate?</li>
 		</ol>
 
-		<p>Your responses are closest to that of the <strong>%@</strong>. The group you are the most unlike is that of the <strong>%@</strong>.</p>
+		<p style="margin: 20px;">Your responses are closest to that of the <strong>%@</strong>. The group you are the most unlike is that of the <strong>%@</strong>.</p>
 		
 	</div>
 
-	<div class="alert alert-info">
+	<div class="alert alert-info" style="margin: 20px;">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
