Changed web view size to not cut off graph.  Got the type cell to show.

--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -43,7 +43,7 @@
     
 </head>
 <body>
-    <div id="container" style="margin: 10px auto 10px; width: 280px; height: 200px"></div>
+    <div id="container" style="margin: 10px auto 10px; width: 280px; height: 200px; max-height: 200px;"></div>
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
