Chart work and reordered results links with numbers

--- a/Negotiation3/reports/overview.html
+++ b/Negotiation3/reports/overview.html
@@ -88,10 +88,13 @@
                                      },
                                      
                                      yAxis: {
-							         lineWidth: 0,
-								 	 tickInterval: 4,
-							         max: 8,
-									 min: 0
+							            lineWidth: 0,
+										tickInterval: 4,
+										step: 2,
+							            endOnTick: false,
+										endOnTick: true,
+							            showLastLabel: true,
+							            startOnTick: true
                                      },
                                      
                                      tooltip: {
