--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -116,8 +116,11 @@
 	        yAxis: {
 	            lineWidth: 0,
 				tickInterval: 4,
-	            max: 8,
-				min: 0
+				step: 2,
+	            endOnTick: false,
+				endOnTick: true,
+	            showLastLabel: true,
+	            startOnTick: true
 	        },
 
 	        tooltip: {
