Content edits from Mike

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -24,15 +24,15 @@
 	<div>
 		<p style="margin: 20px;">Everyone negotiates. At work. In their communities. And even at home with their families. Negotiating well means:</p>
 
-		<ul>
+		<ul style="margin: 20px 20px 20px 0px;">
 			<li>reaching agreements that might slip through most people's fingers</li>
-			<li>creating value that others might overlook</li>
+			<li>crafting value-creating solutions</li>
 			<li>resolving small differences before they become costly disputes</li>
 		</ul>
 
-		<p style="margin: 20px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills. They also are agile. They adjust their approach to the situation at hand and deal with different bargaining styles.</p>
+		<p style="margin: 20px;">Successful negotiators are well-rounded. They rely on complementary interpersonal, analytic, and problem-solving skills. They also are agile. They adjust their approach to the situation at hand and can deal effectively with different bargaining styles.</p>
 
-		<p style="margin: 20px;">To enhance your own effectiveness as a negotiator, start by honestly assessing your current strengths and weaknesses. <strong>Negotiation 360&deg;</strong> provides a personalized profile of the skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties..</p>
+		<p style="margin: 20px;"><strong>Negotiation 360&deg;</strong> provides you with a personalized profile of your relational and problem-solving skills. It identifies skills that you can build on and other areas where you can improve. It also highlights key negotiation concepts about creating value and engaging other parties.</p>
 
 	</div>
 		 
@@ -43,7 +43,7 @@
 				<span data-icon="&#xe032;" style="font-size: 24px"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
-				Tap Next to take the short test, analyze your feedback, and then review the tips for making better deals
+				To begin, tap <strong>Next</strong> above and take the short self-assessment test. Then analyze your feedback and review the tips for making better deals. 
 			</div>
 		</div>
 	</div>
