--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="css/bootstrap.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <style type="text/css">
 
@@ -54,15 +55,27 @@
     <ul>
       <li class="first dragend-page">
 		    <div id="interpersonalDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others. Research show that many people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, while appearing cooperative might be misread as weakness.) Nevertheless, some people feel equally good at both skills.</p>
+			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: asserting yourself and understanding others. Research show that many people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example; or  appearing cooperative might be misread as weakness.) Nevertheless, some people feel equally good at both skills.</p>
       </li>
       <li class="middle dragend-page">
 		    <div id="outcomeDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it. In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests. But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they will get most of it.</p>
+			<p>Two other questions address <strong>outcomes</strong>, specifically the ability to create value and capture your share of it. In practice there is often a tension between these two skills. Value-creating trades require understanding the parties' complementary interests.  But if you disclose your interests unilaterally, you might be exploited by others who bluff and conceal their true needs. Value will be created, but they may get most of it.</p>
       </li>
       <li class="last dragend-page">
 		    <div id="equalRatings" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the means of negotiation and the outcome scale as the ends. Putting the two scales together reveals common bargaining styles. In this example, the two scales intersect at the zero-zero, with a user who has a rating of 4 for the four skills, counting out from the center for each one. That balance may look nice, but some situations demand certain skills more than others.</p>
+			<p>Your negotiation results are linked to how you relate to other parties. Think of the interpersonal scale as representing the <strong>means</strong> of negotiation and the outcome scale as the <strong>ends</strong>. Putting the two scales together reveals common bargaining styles. In this example, the two scales intersect at the zero-zero, with a user who has a rating of 4 for the four skills, counting out from the center for each one. That balance may look nice, but some situations demand certain skills more than others.</p>
+      </li>
+      <li class="last dragend-page">
+			<div class="alert alert-info" style="margin: 30px auto 10px; width: 280px; height: 200px">
+				<div class="row">
+					<div class="col-xs-1" style="margin-right:10px">
+						<span data-icon="&#xe587;" style="font-size: 36px"></span>
+					</div>
+					<div class="col-xs-10" style="font-size: 20px; font-weight:300; line-height:1.14285714285714">
+						Tap Back to Your Results to see how these skills reflect different bargaining styles.
+					</div>
+				</div>
+			</div>
       </li>
     </ul>
   </div>
