--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="css/bootstrap.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <style type="text/css">
 
@@ -54,28 +55,40 @@
     <ul>
       <li class="first dragend-page">
 		    <div id="clusterGraph" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>We used statistical tools to see how negotiators who have taken this test cluster, according to their own perceived strengths and weaknesses. In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average we received in our pre-launch survey.</p>
-			<p>We found five basic types. Some people were strongly identified with a particular type, while others were close to the boundary between one group and another.</p>
+			<p>We used statistical tools to analyze responses from other negotiators who have taken this test.  In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average that we received in our pre-launch survey.</p>
+			<p>We found five basic types, each one with a different balance of relative strengths. Some people were strongly identified with a particular style, while others were close to the boundary between one group and another. In your own dealings, you've likely  encountered each one of these types.</p>
       </li>
       <li class="dragend-page">
 		    <div id="empatheticValueCreators" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Pictured here are <strong>Empathetic value creators</strong>. They have above average confidence about understanding the true needs of their counterparts. And likely as a result, they believe they are more likely to spot problem-solving opportunities. But on the other hand, they have below average confidence when it comes to asserting their own interests and maximizing their share of the resulting value.</p>
+			<p><strong>Empathetic Value-Creators</strong> <i>(30 percent of respondents)</i>. These people have above average confidence about understanding the true needs of their counterparts. They also believe they are good at spotting problem-solving opportunities. On the other hand, they have less confidence about asserting their own interests and maximizing their share of the resulting value.</p>
       </li>
       <li class="dragend-page">
 		    <div id="assertiveValueClaimers" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>By contrast, other people who are more confident about self-advocacy may be capture a larger slice of the pie (though there may be less total value to win). The profile of <strong>Assertive value claimers</strong> is shown here. It's the mirror image of the Empathetic value creators, in that they are more confident about their skill in advocating for themselves, but less sure about their ability to relate to others.</p>
+			<p><strong>Assertive Value-Claimers</strong> <i>(15 percent of respondents)</i>. These people are confident about their ability to advocate their own interests. As a result, they believe that they are able to capture a larger slice of the pie (though there may be less total value to win). This profile is the mirror image of the Empathetic Value-Creators, as confidence about self-advocacy is offset by less assurance about relating to others.</p>
       </li>
       <li class="middle dragend-page">
 		    <div id="assertiveValueCreators" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Other people-<strong>Assertive value creators</strong>-are just as confident about their ability to advocate for themselves are Assertive value claimers, but less so about the value they obtain. Their profile is shown here. In reality some of them may perform very well, but as psychological "maximizers," no matter how much they get, they tend worry that they should have claimed an even a bigger share of the pie.</p>
+			<p><strong>Assertive Value-Creators</strong> <i>(15 percent of respondents)</i>. Like Assertive Value-Claimers, these people are just as confident about their ability to advocate for themselves, but are less certain about the value they obtain. In reality some of them may perform very well, but as psychological "maximizers," no matter how much they get, they tend worry that they should have claimed an even a bigger share of the pie.</p>
       </li>
       <li class="dragend-page">
 		    <div id="relationalNegotiatiors" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Some others who have taken this test have rated themselves high on both ends of the interpersonal scale. The profile of <strong>Relational negotiators</strong> is shown here. That self-assessments may be accurate, though it raises the question of why, given superior relational skills, they don't do better at creating and claiming value.</p>
+			<p><strong>Relational Negotiators</strong> <i>(25 percent of respondents)</i>. These people  rated themselves strongest at self-advocacy and empathy. Maybe that self-assessment is accurate, though it raises the question of why, given superior relational skills, they don't do better at either creating or claiming value.</p>
+      </li>
+      <li class="dragend-page">
+		    <div id="outcomeFocusedNegotiatiors" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
+			<p><strong>Outcome-Focused Negotiators</strong> <i>(20 percent of respondents)</i>. These people rated themselves strongest on both ends of the outcome scale. They may be correct, though it raises a question of how it's possible to attain good results in spite of relational skills that are not as strong.</p>
       </li>
       <li class="last dragend-page">
-		    <div id="outcomeFocusedNegotiatiors" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>In turn, still other people rate themselves high on both ends of the outcome scale. This is the profile of <strong>Outcome-focused negotiators</strong>. It may be accurate, as well, though it raises a question of whether it's easy to attain good results with relational skills that are not as strong.</p>
+			<div class="alert alert-info" style="margin: 30px auto 10px; width: 280px; height: 200px">
+				<div class="row">
+					<div class="col-xs-1" style="margin-right:10px">
+						<span data-icon="&#xe587;" style="font-size: 36px"></span>
+					</div>
+					<div class="col-xs-10" style="font-size: 20px; font-weight:300; line-height:1.14285714285714">
+						Tap Back to Your Results to see how your personal profile compares to these different groups.
+					</div>
+				</div>
+			</div>
       </li>
     </ul>
   </div>
