--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -24,9 +24,9 @@
         <img src="image-7.png" width="125px" height="125px" class="img-circle">
 	</div>
 	<div>
-		<p style="margin: 20px;">You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate our overall effectiveness, for the same reasons that it's hard to judge our success in a particular transaction. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
+		<p style="margin: 20px;">You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate our overall effectiveness. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
 	<p style="margin: 20px;">Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to prepare their strategy carefully. They also know that they have to be agile, ready to cope with changes in circumstances and whatever approach their counterpart takes, be it collaborative or competitive.</p>
-    <p style="margin: 20px;">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you might invite a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
+    <p style="margin: 20px;">Ideally, of course, you'd like to excel at each of the four skills: asserting your interests, understanding others, creating value, and claiming your share. But each of them involves a tradeoff. By being more open, you may encourage a cooperative response. But you could also risk exploitation, depending on whom you're dealing with. Likewise, firmly asserting your interests may win you a larger share, but if the other party also digs in, it could be harder for both of you to find creative solutions.</p>
     <p style="margin: 20px;"><strong>Here are some tips for improving your effectiveness:</strong></p>
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 20px;">
@@ -42,8 +42,8 @@
 			<ul class="list-group">
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Inquire.</strong> Without realizing it, many negotiators fail to test their assumptions about the other parties' needs and perceptions.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Listen deeply.</strong> Don't prejudge. Be alert for ideas you can build on.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are feeling anxious, maybe they are feeling that, too.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="top" title="Bill Ury" data-content="Author of Getting to Yes and Getting Past No" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are anxious, maybe they are feeling that, too.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="top" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes and Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
 			</ul>
 	    </div>
 	  </div>
@@ -74,10 +74,10 @@
 	    </div>
 	    <div id="collapseThree" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <strong><a href="javascript://" id="example3" data-toggle="popover" data-placement="bottom" title="Anchoring" data-content="Psychological research shows that people often get unduly influenced by the first offer they hear, even if it’s unreasonable." style="color:#ff9f33">"anchored."</a></strong> Work from your number. Not theirs.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <strong><a href="javascript://" id="example3" data-toggle="popover" data-placement="bottom" title="Anchoring" data-content="Psychological research shows that people often get unduly influenced by the first offer they hear, even if it's unreasonable." style="color:#ff9f33">"anchored."</a></strong> Work from your number. Not theirs. Provide solid reasons for your offers and where you have to say no.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Watch the clock.</strong> If the other party is under a deadline, use that to your advantage.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Try <strong>"post-settlement settlement."</strong> After reaching a firm agreement, suggest that you review the terms to see if further adjustments might help both parties.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the <strong>winner's curse.</strong> Don't waste time worrying about whether you could have gotten more. The only way to know for sure is to demand too much and blow up the deal.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the <strong>winner's curse.</strong> Don't waste time worrying about whether you could have gotten more. The only way to know just how far you can push is by demanding too much and risking impasse.</li>
 			</ul>
 	    </div>
 	  </div>
