Content edits + new files added

--- a/Negotiation3/reports/profiles.html
+++ b/Negotiation3/reports/profiles.html
@@ -56,6 +56,9 @@
       <li class="first dragend-page">
 		    <div id="clusterGraph" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
 			<p>We used statistical tools to analyze responses from other negotiators who have taken this test.  In order to make group comparisons, we "normalized" the data. That is, we compared each person's response to the average that we received in our pre-launch survey.</p>
+      </li>
+      <li class="dragend-page">
+		    <div id="clusterGraph" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
 			<p>We found five basic types, each one with a different balance of relative strengths. Some people were strongly identified with a particular style, while others were close to the boundary between one group and another. In your own dealings, you've likely  encountered each one of these types.</p>
       </li>
       <li class="dragend-page">
