--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -43,15 +43,17 @@
 	<div id="container" style="margin: 10px auto 10px; width: 280px; height: 280px"></div>
 	
 	<div>
-		<p style="margin: 20px;">The scores that you gave yourself generated this personal profile. Consider the following questions:</p>
-		
-		<ol style="margin:40px">
-			<li>Is this profile a good fit for the kinds of negotiations that you typically do? If you had to choose, where should your biggest strength be?</li><br>
-			<li>Can you see a connection between your relational skills and your ability to create and claim value?</li><br>
-			<li>How flexible are you, that is, can you be more assertive when that's necessary, but more creative when that's appropriate?</li>
-		</ol>
+		<p style="margin: 20px;">The ratings you entered most closely match those of <strong>%@</strong>. Custom sentence of text will go here (<i>The group you are the most unlike is that of the <strong>%@</strong></i>.)</p>
 
-		<p style="margin: 20px;">Your responses are closest to that of the <strong>%@</strong>. The group you are the most unlike is that of the <strong>%@</strong>.</p>
+		<p style="margin: 20px;">Custom paragraph of text will go here.</p>
+		
+		<p style="margin: 20px;">Also, consider the following questions:</p>
+
+		<ol style="margin: 20px 20px 20px 40px;">
+			<li>Is this profile a good fit for most of the negotiations you do?</li><br>
+			<li>If you had to choose, where should your biggest strength be?</li><br>
+			<li>How flexible are you; that is, can you vary your approach according to the situation and the styles of different people you deal with?</li>
+		</ol>
 		
 	</div>
 
