--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -63,7 +63,7 @@
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
-				Go read the section on the 5 Negotiation Profiles to learn more about each of these styles.
+				Go read the section on the Bargaining Styles to learn more about each of these types.
 			</div>
 		</div>
 	</div>
