Project settings and content edits

--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -80,7 +80,7 @@
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
-				You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap Back to see how these four essential skills are connected to one another.
+				You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap Next to see how these four essential skills are connected to one another.
 			</div>
 		</div>
 	</div>
