--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -31,7 +31,7 @@
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 20px;">
 	  <div class="panel panel-warning">
-	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
+	    <div class="panel-heading" style="background-color: #ff9f33; border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
 	          <span data-icon="&#xe049;"></span>&nbsp;&nbsp;Understand the other side
@@ -43,7 +43,7 @@
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Inquire.</strong> Without realizing it, many negotiators fail to test their assumptions about the other parties' needs and perceptions.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Listen deeply.</strong> Don't prejudge. Be alert for ideas you can build on.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are anxious, maybe they are feeling that, too.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="top" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes and Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="left" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes and Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that is going on.</li>
 			</ul>
 	    </div>
 	  </div>
