added string1 and string values and displayed on about your profile

--- a/Negotiation3/reports/yourprofile.html
+++ b/Negotiation3/reports/yourprofile.html
@@ -43,9 +43,9 @@
 	<div id="container" style="margin: 10px auto 10px; width: 280px; height: 280px"></div>
 	
 	<div>
-		<p style="margin: 20px;">The ratings you entered most closely match those of <strong>%@</strong>. Custom sentence of text will go here (<i>The group you are the most unlike is that of the <strong>%@</strong></i>.)</p>
+		<p style="margin: 20px;">The ratings you entered most closely match those of <strong>%@</strong>. %@ (<i>The group you are the most unlike is that of the <strong>%@</strong></i>.)</p>
 
-		<p style="margin: 20px;">Custom paragraph of text will go here.</p>
+		<p style="margin: 20px;">%@</p>
 		
 		<p style="margin: 20px;">Also, consider the following questions:</p>
 
