Compare html changes

--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-6.png");
+            background-image:url("top-banner-3.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-6.png" width="125px" height="125px" class="img-circle">
+        <img src="image-3.png" width="125px" height="125px" class="img-circle">
 	</div>
 	
 	<div>
@@ -37,23 +37,23 @@
 			<tbody>
 				<tr>
 					<td>Understanding other parties</td>
-					<td align="center">5</td>
-					<td align="center"><strong>%@</strong></td>
+					<td align="center" style="font-size: 16px">5</td>
+					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 				<tr>
 					<td>Asserting your interests</td>
-					<td align="center">4</td>
-					<td align="center"><strong>%@</strong></td>
+					<td align="center" style="font-size: 16px">4</td>
+					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 				<tr>
 					<td>Creating value</td>
-					<td align="center">4</td>
-					<td align="center"><strong>%@</strong></td>
+					<td align="center" style="font-size: 16px">4</td>
+					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 				<tr>
 					<td>Getting the maximum</td>
-					<td align="center">3</td>
-					<td align="center"><strong>%@</strong></td>
+					<td align="center" style="font-size: 16px">3</td>
+					<td align="center" style="font-size: 16px"><strong>%@</strong></td>
 				</tr>
 			</tbody>
 		</table>	
